2007-01-18  OHASHI Akira  <bg66@koka-in.org>

	* sb-mixi.el (shimbun-mixi-get-headers): Get headers of comments
	before parent's.

2007-01-18  OHASHI Akira  <bg66@koka-in.org>

	* sb-mixi.el (shimbun-mixi-get-headers): Stop getting comment's
	headers when it was already shown.

2007-01-18  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (mixi-friend-nick-regexp): Follow the change of mixi.
	(mixi-friend-page): Ditto.
	(mixi-realize-friend): Ditto.

2007-01-17  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el: (mixi-get-matched-items): Add REVERSE argument.
	(mixi-get-comments): Follow the change above.

2007-01-17  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el: (mixi-realize-message): Follow the change of mixi.

2007-01-17  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el: (with-mixi-retrieve): Don't bind `buffer' variable.
	(with-mixi-post-form): Ditto.
	(mixi-get-matched-items): Follow the change above.
	(mixi-make-me): Ditto.
	(mixi-realize-diary): Ditto.
	(mixi-post-diary): Ditto.
	(mixi-realize-community): Ditto.
	(mixi-realize-topic): Ditto.
	(mixi-post-topic): Ditto.
	(mixi-realize-event): Ditto.
	(mixi-post-comment): Ditto.
	(mixi-realize-message): Ditto.
	(mixi-post-message): Ditto.
	(mixi-realize-news): Ditto.
	(mixi-realization-error): Ditto.
	(mixi-post-error): Ditto.

2007-01-17  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el: Avoid warnings when compiling.

2007-01-16  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (mixi-login-use-ssl): New user option.
	(mixi-login): Use it.

2007-01-15  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (mixi-diary-list-regexp): Fix regexp.
	(mixi-get-diaries): Follow the change above.

2007-01-15  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (mixi-bbs-p): Simplify.
	(mixi-message-box-p): Ditto.
	(mixi-news-category-p): Ditto.
	(mixi-news-sort-list): New constant.
	(mixi-news-sort-p): New macro.
	(mixi-news-sort-id): New function.
	(mixi-news-list-page): Add SORT argument.
	(mixi-get-news): Ditto.
